deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kii-db
  namespace: kii-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kii-db
  template:
    metadata:
      labels:
        app: kii-db
    spec:
      containers:
        - name: kii-db
          image: postgres:14
          ports:
            - containerPort: 5432
