db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: kii-namespace
spec:
  selector:
    app: kii-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
