service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kii-app
  namespace: kii-namespace
spec:
  type: NodePort
  selector:
    app: kii-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9090
      nodePort: 30090
